# lib-version

./: README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: write_version.py
src/lib_version/: __init__.py  _version.py  builder.py  cli.py  version_util.py
tests/: test_cli.py  test_version_util.py
