[project]
name = "lib_version"
dynamic = ["version"]
description = "Library for versioning"
authors = [{ name="Angelos Mangos", email="aemangos@tudelft.nl" }]
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {attr = "lib_version.__version__"}

[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"