[project]
name = "lib_version"
dynamic = ["version"]
description = "Library for versioning"
authors = [{ name="Angelos Mangos", email="aemangos@tudelft.nl" }]
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {attr = "lib_version.__version__"}

[tools.setuptools]
include-package-data = true

[tool.setuptools.package-data]
lib_version = ["*.json"]

[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
lib-version = "lib_version.cli:main"